@@ -5,5 +5,6 @@
 * added permissions
 * added commands
 * fixed multiple rewards with same kill count not working
+* added default rewards.yml file
 === Version 0.1 ===
 * initial release
